--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "Landkit",
+  "name": "thecompanyx",
   "version": "1.1.2",
   "description": "",
   "main": "gulpfile.js",
