chnage site name

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-node_modules/
+nawsode_modules/
 dist/
 src/.tmp/
 .DS_Store
@@ -12,7 +12,6 @@ amplify/backend/awscloudformation
 build/
 dist/
 node_modules/
-aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
 amplify-gradle-config.json
